introduce id system that looks like the old one