@@ -11,6 +11,10 @@ import java.util.Objects;
 import java.util.Optional;
 
 import com.bakdata.conquery.quarkus.config.DatasetMetadataRuntimeConfig;
+import com.bakdata.conquery.quarkus.ids.ColumnId;
+import com.bakdata.conquery.quarkus.ids.ConceptId;
+import com.bakdata.conquery.quarkus.ids.DatasetId;
+import com.bakdata.conquery.quarkus.ids.TableId;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.inject.Inject;
@@ -57,7 +61,7 @@ class DatasetMetadataFolderLoaderTest {
 				  "connectors": [
 				  	{
 				  		"label": "kh-diagnose",
-				  		"name": "kh-diagnose",
+				  		"name": "kh_diagnose",
 				  		"table": "kh_diagnose"
 				  	}
 				  ],
@@ -68,7 +72,6 @@ class DatasetMetadataFolderLoaderTest {
 				      "condition":{"type":"AND","conditions":[{"type":"EQUAL","values":["A00","A000"]},{"type":"COLUMN_EQUAL","column":"aufnahmeart","values":["stationaer"]}]},
 				      "children":[
 				        {
-				          "name":"a00_0",
 				          "label":"A00.0",
 				          "condition":{"type":"EQUAL","values":["A000"]},
 				          "children":[]
@@ -116,16 +119,16 @@ class DatasetMetadataFolderLoaderTest {
 		assertEquals(1, loaded.size());
 
 		DatasetMetadataFolderLoader.LoadedDatasetMetadata dataset = loaded.getFirst();
-		assertEquals("fdb_demo", dataset.dataset().id());
+		assertEquals(DatasetId.parse("fdb_demo"), dataset.dataset().id());
 		assertEquals("demo", dataset.dataset().label());
 
-		assertTrue(dataset.conceptsById().containsKey("fdb_demo.icd"));
-		DatasetCatalogRepository.Concept concept = dataset.conceptsById().get("fdb_demo.icd");
+		assertTrue(dataset.conceptsById().containsKey(ConceptId.parse("fdb_demo.icd")));
+		DatasetCatalogRepository.Concept concept = dataset.conceptsById().get(ConceptId.parse("fdb_demo.icd"));
 		assertEquals("ICD", concept.label());
-		assertEquals(List.of("fdb_demo.icd.a00"), concept.childrenIds());
+		assertEquals(List.of(ConceptId.parse("fdb_demo.icd.a00")), concept.childrenIds());
 
-		DatasetCatalogRepository.ConceptElement child = concept.children().get("fdb_demo.icd.a00");
-		assertEquals("fdb_demo.icd", child.parentId());
+		DatasetCatalogRepository.ConceptElement child = concept.children().get(ConceptId.parse("fdb_demo.icd.a00"));
+		assertEquals(ConceptId.parse("fdb_demo.icd"), child.parentId());
 		assertEquals("AND", child.condition().type());
 		assertEquals(2, child.condition().conditions().size());
 		assertEquals(List.of("A00", "A000"), child.condition().connectorValues());
@@ -133,18 +136,18 @@ class DatasetMetadataFolderLoaderTest {
 		assertEquals("COLUMN_EQUAL", columnCondition.type());
 		assertEquals("aufnahmeart", columnCondition.column());
 		assertEquals(List.of("stationaer"), columnCondition.values());
-		assertEquals(List.of("fdb_demo.icd.a00.a00_0"), child.children());
+		assertEquals(List.of(ConceptId.parse("fdb_demo.icd.a00.A00_0")), child.children());
 
-		DatasetCatalogRepository.ConceptElement leaf = concept.children().get("fdb_demo.icd.a00.a00_0");
-		assertEquals("fdb_demo.icd.a00", leaf.parentId());
+		DatasetCatalogRepository.ConceptElement leaf = concept.children().get(ConceptId.parse("fdb_demo.icd.a00.A00_0"));
+		assertEquals(ConceptId.parse("fdb_demo.icd.a00"), leaf.parentId());
 		assertEquals("EQUAL", leaf.condition().type());
 		assertEquals(List.of("A000"), leaf.condition().connectorValues());
 
-		assertTrue(dataset.tablesById().containsKey("fdb_demo.kh_diagnose"));
-		DatasetCatalogRepository.TableRecord table = dataset.tablesById().get("fdb_demo.kh_diagnose");
-		assertEquals("fdb_demo.kh_diagnose.icd_code", table.columns().get(0).id());
+		assertTrue(dataset.tablesById().containsKey(TableId.parse("fdb_demo.kh_diagnose")));
+		DatasetCatalogRepository.TableRecord table = dataset.tablesById().get(TableId.parse("fdb_demo.kh_diagnose"));
+		assertEquals(ColumnId.parse("fdb_demo.kh_diagnose.icd_code"), table.columns().get(0).id());
 		assertEquals("icd_code", table.columns().get(0).secondaryId());
-		assertEquals("fdb_demo.kh_diagnose.entlassungsdatum", table.columns().get(1).id());
+		assertEquals(ColumnId.parse("fdb_demo.kh_diagnose.entlassungsdatum"), table.columns().get(1).id());
 		assertNotNull(table.columns().get(1).type());
 	}
 
@@ -168,7 +171,7 @@ class DatasetMetadataFolderLoaderTest {
 
 			@Override
 			public Optional<List<String>> folders() {
-				return Optional.of(List.of("imdb", "empty-set"));
+				return Optional.of(List.of("imdb", "empty_set"));
 			}
 		};
 
@@ -176,19 +179,19 @@ class DatasetMetadataFolderLoaderTest {
 		assertEquals(2, loaded.size());
 
 		DatasetMetadataFolderLoader.LoadedDatasetMetadata imdb = loaded.stream()
-																	  .filter(metadata -> metadata.dataset().id().equals("imdb"))
+																	  .filter(metadata -> metadata.dataset().id().equals(DatasetId.parse("imdb")))
 																	  .findFirst()
 																	  .orElseThrow();
-		assertEquals("imdb", imdb.dataset().id());
+		assertEquals(DatasetId.parse("imdb"), imdb.dataset().id());
 		assertEquals("IMDb", imdb.dataset().label());
-		assertTrue(imdb.conceptsById().containsKey("imdb"));
-		assertTrue(imdb.tablesById().containsKey("imdb.title"));
+		assertTrue(imdb.conceptsById().containsKey(ConceptId.parse("imdb")));
+		assertTrue(imdb.tablesById().containsKey(TableId.parse("imdb.title")));
 
-		DatasetCatalogRepository.TableRecord title = imdb.tablesById().get("imdb.title");
+		DatasetCatalogRepository.TableRecord title = imdb.tablesById().get(TableId.parse("imdb.title"));
 		assertEquals("Titles", title.label());
-		assertEquals("imdb.title.id", title.primaryColumn());
+		assertEquals(ColumnId.parse("imdb.title.id"), title.primaryColumn());
 		assertEquals(3, title.columns().size());
-		assertEquals("Title ID", title.columns().get(0).label());
+		assertEquals("Title ID", title.columns().getFirst().label());
 		assertEquals(DatasetCatalogRepository.ColumnType.INTEGER, title.columns().get(0).type());
 		assertEquals("pid", title.columns().get(0).secondaryId());
 		assertEquals("Title", title.columns().get(1).label());
@@ -197,7 +200,7 @@ class DatasetMetadataFolderLoaderTest {
 		assertEquals(DatasetCatalogRepository.ColumnType.DATE, title.columns().get(2).type());
 
 		DatasetMetadataFolderLoader.LoadedDatasetMetadata emptySet = loaded.stream()
-																		   .filter(metadata -> metadata.dataset().id().equals("empty-set"))
+																		   .filter(metadata -> metadata.dataset().id().toString().equals("empty_set"))
 																		   .findFirst()
 																		   .orElseThrow();
 		assertTrue(emptySet.conceptsById().isEmpty());
@@ -207,7 +210,7 @@ class DatasetMetadataFolderLoaderTest {
 	@Test
 	void fallsBackToFolderNameWhenDatasetJsonIsMissing(@TempDir Path tempDir) throws Exception {
 		Path root = tempDir.resolve("test-datasets");
-		String datasetName = "fallback-dataset-name";
+		String datasetName = "fallback_dataset_name";
 		Path fallback = root.resolve(datasetName);
 		Files.createDirectories(fallback.resolve("conceptTrees"));
 		Files.createDirectories(fallback.resolve("tables"));
@@ -232,7 +235,7 @@ class DatasetMetadataFolderLoaderTest {
 		};
 
 		DatasetCatalogRepository.DatasetRecord dataset = loader.loadConfiguredDatasets().getFirst().dataset();
-		assertEquals(datasetName, dataset.id());
+		assertEquals(DatasetId.parse(datasetName), dataset.id());
 		assertEquals(datasetName, dataset.label());
 	}
 }
